<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/video_detail_thumb_padding_ver"
    android:paddingBottom="@dimen/video_detail_thumb_padding_ver"
    android:orientation="vertical" >
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="right">
        
        <TextView 
            style="@style/ActionbarText"
		    android:id="@+id/video_action_delete"
		    android:layout_width="wrap_content"
	    	android:layout_height="match_parent"
	    	android:text="@string/video_action_delete"/>
        <TextView 
            style="@style/ActionbarText"
		    android:id="@+id/video_action_rename"
		    android:layout_width="wrap_content"
	    	android:layout_height="match_parent"
	    	android:text="@string/video_action_rename"/>
        <TextView 
            style="@style/ActionbarText"
		    android:id="@+id/video_action_play"
		    android:layout_width="wrap_content"
	    	android:layout_height="match_parent"
	    	android:text="@string/video_action_play"/>
        <TextView 
            style="@style/ActionbarText"
		    android:id="@+id/video_action_addto"
		    android:layout_width="wrap_content"
	    	android:layout_height="match_parent"
	    	android:text="@string/video_action_addto"/>
        <TextView 
            style="@style/ActionbarText"
		    android:id="@+id/video_action_close"
		    android:layout_width="wrap_content"
	    	android:layout_height="match_parent"
	    	android:text="@string/video_action_close"/>
    </LinearLayout>
    <TextView 
	    android:id="@+id/video_detail_thumb_path"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="5dp"/>
    <TextView 
	    android:id="@+id/video_detail_thumb_title"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="5dp"/>
	<GridView 
	    android:id="@+id/video_detail_thumb_grid"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:numColumns="4"
	    android:layout_marginTop="10dp"/>
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="30dp"
	    android:orientation="horizontal"
	    android:gravity="center_vertical"
		android:layout_marginTop="10dp">
		<CheckBox 
		    android:id="@+id/video_detail_thumb_showtime"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:text="@string/video_action_showtime"
		    android:checked="true"/>
		<View 
		    android:layout_width="0dp"
		    android:layout_weight="1"
		    android:layout_height="match_parent"/>
        <TextView 
            style="@style/ActionbarText"
		    android:id="@+id/video_detail_thumb_save"
		    android:layout_width="wrap_content"
	    	android:layout_height="match_parent"
	    	android:text="@string/video_detail_thumb_save"/>
	</LinearLayout>
</LinearLayout>
