<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginTop="20dp" >
	    <TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/video_popup_forward_unit"/>
	    <TextView 
	        android:id="@+id/video_popup_forrward_unit"
	        android:layout_marginLeft="20dp"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"/>
	</LinearLayout>
	<SeekBar 
	    android:id="@+id/video_popup_forward_unit_seekbar"
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"/>
    <TextView 
        android:id="@+id/video_popup_screenshot"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingTop="10dp" 
	    android:paddingBottom="10dp" 
		android:text="@string/video_popup_screenshot"/>
    <TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingTop="10dp" 
	    android:paddingBottom="10dp" 
	    android:layout_marginTop="10dp"
		android:text="@string/video_popup_screen_size"/>
    <LinearLayout 
	    android:id="@+id/video_popup_screen_size_container"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
	        <RadioButton 
	    		android:id="@+id/video_popup_screen_size_matchscreen"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/video_popup_screen_size_matchscreen"
			    android:textSize="@dimen/video_popup_radio_text_size"
			    android:layout_marginLeft="@dimen/video_popup_radio_left_margin"/>
	        <RadioButton 
		        android:id="@+id/video_popup_screen_size_origin"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/video_popup_screen_size_origin"
			    android:textSize="@dimen/video_popup_radio_text_size"
			    android:layout_marginLeft="@dimen/video_popup_radio_left_margin"/>
	    </LinearLayout>
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
	        <RadioButton 
		        android:id="@+id/video_popup_screen_size_1_5"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/video_popup_screen_size_1_5"
			    android:textSize="@dimen/video_popup_radio_text_size"
			    android:layout_marginLeft="@dimen/video_popup_radio_left_margin"/>
	        <RadioButton 
		        android:id="@+id/video_popup_screen_size_2"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/video_popup_screen_size_2"
			    android:textSize="@dimen/video_popup_radio_text_size"
			    android:layout_marginLeft="@dimen/video_popup_radio_left_margin"/>
	        <RadioButton 
		        android:id="@+id/video_popup_screen_size_3"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/video_popup_screen_size_3"
			    android:textSize="@dimen/video_popup_radio_text_size"
			    android:layout_marginLeft="@dimen/video_popup_radio_left_margin"/>
	    </LinearLayout>
    </LinearLayout>
</LinearLayout>
