<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout 
	    android:id="@+id/video_actionbar"
	    android:layout_width="match_parent"
    	android:layout_height="@dimen/video_actionbar_height"
    	android:background="@color/video_actionbar_color"
    	android:gravity="right">
    	<LinearLayout 
		    android:id="@+id/video_actionbar_selectall"
		    android:layout_width="0dp"
		    android:layout_weight="1"
	    	android:layout_height="match_parent"
		    android:gravity="center_vertical"
		    android:orientation="horizontal"
		    android:visibility="gone">
    	    <CheckBox 
			    android:id="@+id/video_action_selectall"
			    android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/video_action_selectall"/>
    	</LinearLayout>
    	<EditText 
		    android:id="@+id/video_action_search_edit"
		    android:layout_width="0dp"
		    android:layout_weight="1"
	    	android:layout_height="@dimen/video_actionbar_search_height"
	    	android:layout_gravity="center_vertical"
	    	android:layout_marginRight="@dimen/video_actionbar_right_margin"
	    	android:layout_marginLeft="@dimen/video_actionbar_search_left_margin"
	    	android:background="@drawable/video_search_bg"
	    	android:paddingLeft="@dimen/video_actionbar_search_left_padding"
	    	android:visibility="gone"/>
        <TextView 
            style="@style/ActionbarText"
		    android:id="@+id/video_action_searchclose"
		    android:layout_width="wrap_content"
	    	android:layout_height="match_parent"
	    	android:text="@string/video_action_close"
	    	android:visibility="gone"/>
        <TextView 
            style="@style/ActionbarText"
		    android:id="@+id/video_action_search"
		    android:layout_width="wrap_content"
	    	android:layout_height="match_parent"
	    	android:text="@string/video_action_search"/>
        <TextView 
            style="@style/ActionbarText"
		    android:id="@+id/video_action_sort"
		    android:layout_width="wrap_content"
	    	android:layout_height="match_parent"
	    	android:text="@string/video_action_sort"/>
        <TextView 
            style="@style/ActionbarText"
		    android:id="@+id/video_action_grid"
		    android:layout_width="wrap_content"
	    	android:layout_height="match_parent"
	    	android:text="@string/video_action_grid"/>
        <TextView 
            style="@style/ActionbarText"
		    android:id="@+id/video_action_refresh"
		    android:layout_width="wrap_content"
	    	android:layout_height="match_parent"
	    	android:text="@string/video_action_refresh"/>
        <TextView 
            style="@style/ActionbarText"
		    android:id="@+id/video_action_more"
		    android:layout_width="wrap_content"
	    	android:layout_height="match_parent"
	    	android:text="@string/video_action_more"/>
        <TextView 
            style="@style/ActionbarText"
		    android:id="@+id/video_action_addto"
		    android:layout_width="wrap_content"
	    	android:layout_height="match_parent"
	    	android:text="@string/video_action_addto"
	    	android:visibility="gone"/>
        <TextView 
            style="@style/ActionbarText"
		    android:id="@+id/video_action_delete"
		    android:layout_width="wrap_content"
	    	android:layout_height="match_parent"
	    	android:text="@string/video_action_delete"
	    	android:visibility="gone"/>
    </LinearLayout>
    <com.king.app.video.customview.ScrollTab 
	    android:id="@+id/video_scrolltab"
	    android:layout_width="match_parent"
    	android:layout_height="@dimen/video_scrolltab_height"
    	android:layout_below="@id/video_actionbar"
    	android:background="@color/video_actionbar_color"
    	android:scrollbars="none"/>
    
	<ListView 
	    android:id="@+id/video_listview"
	    android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_below="@id/video_scrolltab"
    	android:visibility="gone"/>

	<GridView 
	    android:id="@+id/video_gridview"
	    android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_below="@id/video_scrolltab"
    	android:numColumns="@integer/video_grid_column"
    	android:verticalSpacing="@dimen/video_list_item_ver_margin_grid"
    	android:visibility="gone"/>
	
	<LinearLayout 
		android:id="@+id/video_list_progress"
	    android:layout_width="match_parent"
    	android:layout_height="match_parent"
	    android:layout_below="@id/video_scrolltab"
    	android:gravity="center">
		<ProgressBar 
		    style="@android:style/Widget.Material.Light.ProgressBar.Inverse"
		    android:layout_width="@dimen/video_load_progress_width"
	    	android:layout_height="@dimen/video_load_progress_width"/>
	</LinearLayout>
</RelativeLayout>
