<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:dslv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/video_detail_thumb_padding_ver"
    android:paddingBottom="@dimen/video_detail_thumb_padding_ver"
    android:orientation="vertical" >
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/video_actionbar_height"
	    android:orientation="horizontal"
	    android:gravity="center_vertical">
        <TextView 
		    android:id="@+id/video_order_manager_title"
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/video_menu_order_manage"
			android:textColor="@color/video_scrolltab_text_selected"
			android:textSize="26sp"
			android:layout_marginLeft="20dp"
			android:textStyle="bold"/>
	    <CheckBox 
	        android:id="@+id/video_order_manager_selectall"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:visibility="gone"
		    android:text="@string/video_action_selectall"/>
	    <View 
		    android:layout_width="0dp"
		    android:layout_weight="1"
	    	android:layout_height="match_parent"/>
        <TextView 
            style="@style/ActionbarText"
		    android:id="@+id/video_action_delete"
		    android:layout_width="wrap_content"
	    	android:layout_height="match_parent"
	    	android:text="@string/video_action_delete"
	    	android:visibility="gone"/>
        <TextView 
            style="@style/ActionbarText"
		    android:id="@+id/video_action_add"
		    android:layout_width="wrap_content"
	    	android:layout_height="match_parent"
	    	android:text="@string/video_action_add"/>
        <TextView 
            style="@style/ActionbarText"
		    android:id="@+id/video_action_rename"
		    android:layout_width="wrap_content"
	    	android:layout_height="match_parent"
	    	android:text="@string/video_action_rename"
	    	android:visibility="gone"/>
        <TextView 
            style="@style/ActionbarText"
		    android:id="@+id/video_action_close"
		    android:layout_width="wrap_content"
	    	android:layout_height="match_parent"
	    	android:text="@string/video_action_close"/>
    </LinearLayout>
	<com.king.lib.listview.DragSortListView 
	    android:id="@+id/video_order_manager_list"
	    android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:divider="@null"
	    dslv:drag_enabled="true"
	    dslv:collapsed_height="2dp"
	    dslv:drag_scroll_start="0.33"
	    dslv:max_drag_scroll_speed="0.5"
	    dslv:float_alpha="0.6"
	    dslv:slide_shuffle_speed="0.3"
	    dslv:track_drag_sort="false"
	    dslv:use_default_controller="false"
	    dslv:float_background_color="@color/video_dialog_bk_grey"/>
</LinearLayout>
