<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:paddingTop="20dp"
    android:paddingBottom="30dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center_vertical" >
	    <TextView 
		    android:id="@+id/video_saveas_title"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="10dp"
		    android:paddingBottom="10dp"
		    android:text="@string/video_saveas_title"
		    android:textSize="16sp"
			android:textStyle="bold"
			android:textColor="@color/video_dlg_title_color"/>
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center_vertical" >
	    <Spinner 
	        android:id="@+id/video_saveas_path"
		    android:layout_width="0dp"
		    android:layout_weight="1"
		    android:layout_height="wrap_content"/>
	    <ImageView 
	        android:id="@+id/video_saveas_path_browse"
		    android:layout_width="60dp"
		    android:layout_height="60dp"
		    android:padding="15dp"
		    android:src="@drawable/video_folderselect"
		    android:scaleType="fitCenter"/>
	</LinearLayout>
	<EditText
	    android:id="@+id/video_saveas_filename"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15dp"
	    android:orientation="horizontal"
	    android:singleLine="true"
	    android:hint="@string/video_saveas_filename" />
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginTop="15dp"
	    android:gravity="right" >
	    <TextView 
		    android:id="@+id/video_saveas_ok"
		    android:layout_width="0dp"
		    android:layout_weight="1"
		    android:layout_height="wrap_content"
		    android:paddingTop="15dp"
		    android:paddingBottom="15dp"
		    android:text="@string/ok"
		    android:textSize="16sp"
			android:textStyle="bold"
			android:textColor="@color/video_lightgreen"
		    android:gravity="center"/>
	    <TextView 
		    android:id="@+id/video_saveas_cancel"
		    android:layout_width="0dp"
		    android:layout_weight="1"
		    android:layout_height="wrap_content"
		    android:text="@string/cancel"
		    android:paddingTop="15dp"
		    android:paddingBottom="15dp"
		    android:textSize="16sp"
			android:textStyle="bold"
			android:textColor="@color/video_lightgreen"
		    android:gravity="center"/>
	</LinearLayout>

</LinearLayout>
