<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingTop="20dp"
    android:paddingBottom="30dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/video_actionbar_height"
	    android:gravity="center_vertical">
        <TextView 
	        android:id="@+id/video_folderdlg_title"
		    android:layout_width="0dp"
		    android:layout_weight="1"
		    android:layout_height="wrap_content"
		    android:textSize="20dp"
		    android:textColor="@color/video_dlg_title_color"
		    android:textStyle="bold"/>
        <TextView 
            style="@style/ActionbarText"
		    android:id="@+id/video_action_add"
		    android:layout_width="wrap_content"
	    	android:layout_height="match_parent"
	    	android:text="@string/video_action_add"/>
        <TextView 
            style="@style/ActionbarText"
		    android:id="@+id/video_action_save"
		    android:layout_width="wrap_content"
	    	android:layout_height="match_parent"
	    	android:text="@string/video_action_save"/>
        <TextView 
            style="@style/ActionbarText"
		    android:id="@+id/video_action_close"
		    android:layout_width="wrap_content"
	    	android:layout_height="match_parent"
	    	android:text="@string/video_action_close"/>
    </LinearLayout>
    <TextView 
        android:id="@+id/video_folderselect_parent"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="parent"
	    android:paddingTop="10dp"
	    android:paddingBottom="10dp"
	    android:visibility="gone"/>
    <ListView 
        android:id="@+id/video_folderselect_list"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"/>

</LinearLayout>
